utilização da função para limpar o buffer, criação da função de historicoSalario e de saidaDoLoop  além das datas que estão sendo solicitadas para cada modificação, entretando ocorreu um erro no fgets(ignorando retorno)

--- a/TRA1.cbp
+++ b/TRA1.cbp
@@ -42,6 +42,10 @@
 		<Unit filename="HistoricoDepartamento.h" />
 		<Unit filename="HistoricoFuncionario.h" />
 		<Unit filename="HistoricoSalario.h" />
+		<Unit filename="funcoesAuxiliares.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="funcoesAuxiliares.h" />
 		<Unit filename="funcoesPesquisa.c">
 			<Option compilerVar="CC" />
 		</Unit>
